tests/errors/compiler/wrong_addr/&_to_function.c
int function ()
{
	return 1;
}
int main()
{
	int a = 1;
	int i;
	i = &function();
	return 0;
}
